# vgarm

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
benchmark_results/franka_20/: config.json  episodes.csv  episodes.jsonl  summary.csv  summary.json  summary.md
benchmark_results/franka_fr3_10/: config.json  episodes.csv  summary.csv  summary.json  summary.md
benchmark_results/franka_panda_10/: config.json  episodes.csv  summary.csv  summary.json  summary.md
benchmark_results/kinova_gen3_10/: config.json  episodes.csv  summary.csv  summary.json  summary.md
benchmark_results/manual_visual_kinova/: config.json  episodes.csv  episodes.jsonl  summary.csv  summary.json  summary.md  summary_by_task.csv  summary_by_task.json  summary_by_task.md
benchmark_results/repro_a/: config.json  episodes.csv  summary.csv  summary.json  summary.md
benchmark_results/repro_b/: config.json  episodes.csv  episodes.jsonl  summary.csv  summary.json  summary.md
benchmark_results/ur5e_10/: config.json  episodes.csv  summary.csv  summary.json  summary.md
benchmark_results/v020_cross_robot_3/: config.json  episodes.csv  episodes.jsonl  summary.csv  summary.json  summary.md  summary_by_task.csv  summary_by_task.json  summary_by_task.md  (+1 more)
docs/: architecture.md  benchmark.md  release_notes.txt  scene_schema.md  trajectory_dataset.md
examples/: analyze_trajectory.py  basic_scene.json  benchmark_tasks.json  load_trajectory.py  read_depth_segmentation_trajectory.py  read_rgb_trajectory.py  rgb_trajectory_tasks.json  trajectory_tasks.json
source/vgarm/: __init__.py  (+1 more)
(+106 files in other folders)
