[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vgarm"
version = "0.4.0"
description = "Reproducible MuJoCo manipulation benchmarks and trajectory datasets"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.23",
  "mujoco>=3.0",
  "duckdb>=1.1",
]

[project.optional-dependencies]
gui = ["pillow>=10.0"]
lerobot = ["lerobot>=0.4.0"]
rgb = [
  "imageio>=2.34",
  "imageio-ffmpeg>=0.5",
]

[project.scripts]
vgarm = "vgarm.cli:main"
vgarm-image = "vgarm_app.image_app:main"

[tool.setuptools]
package-dir = {"" = "source"}

[tool.setuptools.packages.find]
where = ["source"]
include = ["vgarm*", "vgarm_app*"]
